[metadata]
name = signal_id
author = Erik Rosolowsky, Adam Leroy
author_email = rosolowsky@ualberta.ca
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = http://github.com/PhangsTeam/signal-id
description = Signal identification and noise tools for spectral line data cubes
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = PhangsTeam/signal-id

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    spectral-cube
    radio-beam
    scipy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
signal_id = data/*

[tool:pytest]
testpaths = "signal_id" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    signal_id/_astropy_init*
    signal_id/conftest.py
    signal_id/*setup_package*
    signal_id/tests/*
    signal_id/*/tests/*
    signal_id/extern/*
    signal_id/version*
    */signal_id/_astropy_init*
    */signal_id/conftest.py
    */signal_id/*setup_package*
    */signal_id/tests/*
    */signal_id/*/tests/*
    */signal_id/extern/*
    */signal_id/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
